# Chorizite

./: .gitignore  .gitmodules  Chorizite.sln  GitVersion.yml  LICENSE.md  MagicHat.sln  README.md
.github/workflows/: build.yml  make-release.yml
Chorizite.Common/: Chorizite.Common.csproj  EatableEventArgs.cs  WeakEvent.cs
Chorizite.Common/Enums/: AllegianceOfficerLevel.cs  AmmoType.cs  AttackHeight.cs  AttackType.cs  AttributeId.cs  CharacterOptions1.cs  CharacterOptions2.cs  Gender.cs  (+53 more)
Chorizite.Core/: Chorizite.Core.csproj  Chorizite.cs  ChoriziteConfig.cs  ChoriziteEnvironment.cs  FodyWeavers.xml  IChoriziteConfig.cs  README.md  acclient.map
Chorizite.Launcher/: Chorizite.Launcher.csproj  LaunchManager.cs  Program.cs
Chorizite.NativeClientBootstrapper/: ACChoriziteBackend.cs  ACClientUIBackend.cs  Chorizite.NativeClientBootstrapper.csproj  StandaloneLoader.cs
Installer/: Installer.nsi  dotnetcore.nsh  nsJSON-LICENSE.txt  vcredist.nsh
MagicHat.Backends.ACBackend/: MagicHat.Backends.ACBackend.csproj
MagicHat.Core/: IMagicHatConfig.cs  MagicHat.Core.csproj  MagicHat.cs  MagicHatConfig.cs  MagicHatEnvironment.cs
MagicHat.DecalService/: MagicHat.DecalService.csproj  MagicHatService.cs  installer.nsi
MagicHat.Service/: MagicHat.Service.csproj  MagicHatService.cs  installer.nsi
Plugins/: Plugins.sln
ext/RmlUi.Native/: CMakeLists.txt  README.md
ext/RmlUi.Native/include/: Buffer.h  Pool.h  RmlNative.h  StreamFile.h
ext/RmlUi.Native/src/: Box.cpp  Buffer.cpp  Context.cpp  DataModelConstructor.cpp  DataModelHandle.cpp  DataVariable.cpp  Debugger.cpp  Dictionary.cpp  Element.cpp  ElementCustom.cpp  ElementDocument.cpp  ElementFormControlInput.cpp  ElementInstancer.cpp  Event.cpp  EventInstancer.cpp  EventListenerInstancer.cpp  FileInterface.cpp  Plugin.cpp  Property.cpp  PropertyDefinition.cpp  RenderInterface.cpp  RenderManager.cpp  Rml.cpp  StructHandle.cpp  StyleSheetContainer.cpp  StyleSheetSpecification.cpp  SystemInterface.cpp  Util.h  VariableDefinition.cpp  Variant.cpp  Vector.cpp  XMLAttributes.cpp
(+2171 files in other folders)
